# agentm

./: .gitignore  AGENTS.md  ARCHITECTURE.md  CONTRIBUTING.md  LICENSE  README.md  Taskfile.yml  pyproject.toml
docs/: library.md  service.md  service_impl.md  tests.md  tools.md
src/agentm/algebra/: __init__.py
src/agentm/backends/: __init__.py
src/agentm/runtime/: __init__.py
src/agentm/viz/: __init__.py
src/agentm_service/: __init__.py  __main__.py
tests/: test_sanity.py  test_service_e2e.py
tools/: tangle_docs.py
