[project]
name = "agentm"
version = "0.0.0"
requires-python = ">=3.11"
license = { file = "LICENSE" }
dependencies = [
  "trio",
  "networkx",
  "pydantic>=2"
]

[project.optional-dependencies]
dev = [
  "pytest",
  "pytest-trio",
  "hypothesis",
  "mypy",
  "ruff"
]

[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"
